src/doc/logfile.txt
Class documentation
<---- javadoc command: ---->
C:\Program Files (x86)\BlueJ\jdk\bin\javadoc.exe
-author
-version
-nodeprecated
-package
-Xdoclint:none
-noindex
-notree
-nohelp
-nonavbar
-source
1.8
-classpath
C:\Program Files (x86)\BlueJ\lib\bluejcore.jar;C:\Program Files (x86)\BlueJ\lib\junit-4.11.jar;C:\Program Files (x86)\BlueJ\lib\hamcrest-core-1.3.jar;C:\Program Files (x86)\BlueJ\lib\lang-stride.jar;C:\Program Files (x86)\BlueJ\lib\userlib\pi4j-core.jar;C:\Program Files (x86)\BlueJ\lib\userlib\pi4j-device.jar;C:\Program Files (x86)\BlueJ\lib\userlib\pi4j-gpio-extension.jar;C:\Program Files (x86)\BlueJ\lib\userlib\pi4j-service.jar;F:\SignIn\src
-d
F:\SignIn\src\doc
-encoding
UTF-8
-charset
UTF-8
F:\SignIn\src\QTableCellRenderer.java
<---- end of javadoc command ---->
Loading source file F:\SignIn\src\QTableCellRenderer.java...
Constructing Javadoc information...
F:\SignIn\src\QTableCellRenderer.java:6: error: cannot find symbol
    public Component getTableCellRendererComponent(JTable table, Object value, boolean isSelected, boolean hasFocus, int row,int column){
                                                   ^
  symbol:   class JTable
  location: class QTableCellRenderer
Standard Doclet version 1.8.0_144
Building tree for all the packages and classes...
Generating F:\SignIn\src\doc\QTableCellRenderer.html...
Generating F:\SignIn\src\doc\package-frame.html...
Generating F:\SignIn\src\doc\package-summary.html...
Generating F:\SignIn\src\doc\constant-values.html...
Building index for all the packages and classes...
Building index for all classes...
Generating F:\SignIn\src\doc\allclasses-frame.html...
Generating F:\SignIn\src\doc\allclasses-noframe.html...
Generating F:\SignIn\src\doc\index.html...
1 warning
